# xagent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  project-field-sync.yml
.specify/: extensions.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
config/: agents.yaml  tasks.yaml
docs/: github-setup-checklist.md  sdd-operations.md
src/my_agent_enterprise/: __init__.py  __main__.py  factory.py  main.py
src/my_agent_enterprise/adapters/: __init__.py  autogen_impl.py  base.py  crew_impl.py  mock_impl.py
src/my_agent_enterprise/core/: schemas.py
src/my_agent_enterprise/core/tools/: __init__.py
src/xagent/: __main__.py  factory.py  main.py
src/xagent/adapters/: __init__.py  autogen_impl.py  base.py  crew_impl.py  mock_impl.py
src/xagent/core/: __init__.py
src/xagent/core/tools/: __init__.py  research.py
tests/: test_factory.py
